# Zygisk-ImGui-Menu

./: build.gradle
.github/workflows/: build.yml
module/: build.gradle
module/src/main/cpp/: CMakeLists.txt  hook.cpp  hook.h  main.cpp
